--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -2,225 +2,210 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="shortcut icon" href="../assets/images/favicon-page.ico">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="shortcut icon" href="../assets/images/favicon-page.ico">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg background-color bg-opacity-75 p-3" id="menu">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"> <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid"
-            alt="Logo Amazing Events">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <header>
+        <nav class="navbar navbar-expand-lg background-color bg-opacity-75 p-3" id="menu">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid" alt="Logo Amazing Events">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav_item">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./upcoming-events.html">Upcoming events</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./past-events.html">Past events</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"
-                onclick="alert(`Para visualizar detalles de eventos, debes ingresar a las paginas: Home - Upcoming-Events - Past-Events`)">Details</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./stats.html">Stats</a>
-            </li>
-          </ul>
-          <form class="d-flex ms-5" role="search">
-            <input class="form-control me-2" type="email" placeholder="email" aria-label="email">
-            <button class="btn btn-danger btn-danger-outline-danger" type="button">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav_item">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./upcoming-events.html">Upcoming events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./past-events.html">Past events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" onclick="alert(`Para visualizar detalles de eventos, debes ingresar a las paginas: Home - Upcoming-Events - Past-Events`)">Details</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./stats.html">Stats</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex ms-5" role="search">
+                        <input class="form-control me-2" type="email" placeholder="email" aria-label="email">
+                        <button class="btn btn-danger btn-danger-outline-danger" type="button">
               Suscribe
             </button>
-          </form>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <div class="container-flex">
-    <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-bs-target="#carousel1" data-bs-slide-to="0" class="active"></li>
-        <li data-bs-target="#carousel1" data-bs-slide-to="1"></li>
-        <li data-bs-target="#carousel1" data-bs-slide-to="2"></li>
-        
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="img_event1">
-          </div>
-          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-            <p class="display-1 fw-bolder  text-capitalize text-warning">home</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="img_event2">
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="container-flex">
+        <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-bs-target="#carousel1" data-bs-slide-to="0" class="active"></li>
+                <li data-bs-target="#carousel1" data-bs-slide-to="1"></li>
+                <li data-bs-target="#carousel1" data-bs-slide-to="2"></li>
 
-          </div>
-          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-            <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="img_event3">
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="img_event1">
+                    </div>
+                    <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+                        <p class="display-1 fw-bolder  text-capitalize text-warning">home</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="img_event2">
 
-          </div>
-          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-            <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
-          </div>
+                    </div>
+                    <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+                        <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="img_event3">
+
+                    </div>
+                    <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+                        <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel1" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel1" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </a>
         </div>
-      </div>
-      <a class="carousel-control-prev" href="#carousel1" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Anterior</span>
-      </a>
-      <a class="carousel-control-next" href="#carousel1" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Siguiente</span>
-      </a>
     </div>
-  </div>
 
-  <div>
-    <div class="navbar navbar-expand-lg background-color  bg-body-tertiary">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse container-category" id="navbarSupportedContent2">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 check-container">
-            <li class="nav-item">
-              <input type="checkbox" id="cbox1" value="second_checkbox">
-              <label for="cbox1">Film</label>
-            </li>
+    <div>
+        <div class="navbar navbar-expand-lg background-color  bg-body-tertiary">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse container-category" id="navbarSupportedContent2">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 check-container">
+                        <li class="nav-item">
+                            <input type="checkbox" id="cbox1" value="second_checkbox">
+                            <label for="cbox1">Film</label>
+                        </li>
 
-            <li class="nav-item dropdown">
-              <input type="checkbox" id="cbox2" value="second_checkbox">
-              <label for="cbox2">Sports</label>
-            </li>
-            <li class="nav-item">
-              <input type="checkbox" id="cbox3" value="second_checkbox">
-              <label for="cbox3">Theater</label>
-            </li>
-            <li class="nav-item">
-              <input type="checkbox" id="cbox4" value="second_checkbox">
-              <label for="cbox4">Festival</label>
-            </li>
-            <li class="nav-item">
-              <input type="checkbox" id="cbox5" value="second_checkbox">
-              <label for="cbox5">Concert</label>
-            </li>
-          </ul>
+                        <li class="nav-item dropdown">
+                            <input type="checkbox" id="cbox2" value="second_checkbox">
+                            <label for="cbox2">Sports</label>
+                        </li>
+                        <li class="nav-item">
+                            <input type="checkbox" id="cbox3" value="second_checkbox">
+                            <label for="cbox3">Theater</label>
+                        </li>
+                        <li class="nav-item">
+                            <input type="checkbox" id="cbox4" value="second_checkbox">
+                            <label for="cbox4">Festival</label>
+                        </li>
+                        <li class="nav-item">
+                            <input type="checkbox" id="cbox5" value="second_checkbox">
+                            <label for="cbox5">Concert</label>
+                        </li>
+                    </ul>
 
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-success" type="submit">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-success" type="submit">
               Search
             </button>
-          </form>
+                    </form>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  
-  <div class="container-fluid my-4">
-    <div id="carousel2-container" class="carousel slide" data-bs-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-bs-target="#carousel2-container" data-bs-slide-to="0" class="active"></li>
-        <li data-bs-target="#carousel2-container" data-bs-slide-to="1"></li>
-        <li data-bs-target="#carousel2-container" data-bs-slide-to="2"></li>
-        <li data-bs-target="#carousel2-container" data-bs-slide-to="3"></li>
-      </ol>
-      <div class="carousel-inner" id="TemplateCardHome">
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carousel2-container" data-bs-slide="prev">
+
+    <div class="container-fluid my-4">
+        <div id="carousel2-container" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-bs-target="#carousel2-container" data-bs-slide-to="0" class="active"></li>
+                <li data-bs-target="#carousel2-container" data-bs-slide-to="1"></li>
+                <li data-bs-target="#carousel2-container" data-bs-slide-to="2"></li>
+                <li data-bs-target="#carousel2-container" data-bs-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner" id="TemplateCardHome">
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel2-container" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carousel2-container" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel2-container" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    
-    </div>
-  </div>
 
-  <br>
-  <footer class="background-color">
-    <!-- Grid container -->
-    <div class="p-12 pb-0 background-color" class="container1">
-      <!-- Section: Social media -->
-      <div class="mb-4 bg-secondary bg-opacity-75">
-        <div class="text-start p-3 text-white">
-          <div>
-            <!-- Facebook -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #3b5998"
-              href="https://es-la.facebook.com/" role="button"><i class="bi bi-facebook"></i>
-            </a>
-
-            <!-- Twitter -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #55acee"
-              href="https://twitter.com/?lang=es" role="button"><i class="bi bi-twitter"></i>
-            </a>
-
-            <!-- Google -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39"
-              href="https://www.google.com/?hl=es" role="button"><i class="bi bi-google"></i>
-            </a>
-
-            <!-- Instagram -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
-              href="https://www.instagram.com/" role="button"><i class="bi bi-instagram"></i>
-            </a>
-
-            <!-- Linkedin -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="https://co.linkedin.com/"
-              role="button"><i class="bi bi-linkedin"></i>
-            </a>
-
-            <!-- Github -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/"
-              role="button"><i class="bi bi-github"></i>
-            </a>
-          </div>
-          <div class="d-flex justify-content-lg-evenly copyright">
-          © 2023 Todos los derechos reservados - MindHub Cohorte 14 - Grupo #3
-          </div>
         </div>
-      </div>
-      <!-- Section: Social media -->
     </div>
 
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-    crossorigin="anonymous"></script>
+    <br>
+
+
+    <footer class="bg-secondary fixed-bottom text-white">
+        <div class="container-fluid py-3">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-auto">
+                    <div class="social-media">
+                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#" role="button">
+                            <i class="bi bi-facebook"></i>
+                        </a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#" role="button">
+                            <i class="bi bi-twitter"></i>
+                        </a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#" role="button">
+                            <i class="bi bi-google"></i>
+                        </a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#" role="button">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#" role="button">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
+                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#" role="button">
+                            <i class="bi bi-github"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-auto">
+                    <p class="m-0 text-center">&copy; 2023 Todos los derechos reservados - MindHub Cohorte 14 - Grupo #3</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script>
-        $(function () {
+        $(function() {
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
-  <script src="../lib/Js-page1.js" type="text/javascript"></script>
+    <script src="../lib/Js-page1.js" type="text/javascript"></script>
 </body>
 
 </html>
